--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,8 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>2020-03-13</td>\n",
-       "      <td>202024182H</td>\n",
-       "      <td>MRJS INCORPORATED PTE. LTD.</td>\n",
+       "      <td>202030842M</td>\n",
+       "      <td>UNBEATABLE PTE. LTD.</td>\n",
        "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -76,29 +76,259 @@
        "</div>"
       ],
       "text/plain": [
-       "       Entity Registration Date Entity Profile UEN  \\\n",
-       "count                      6613               6613   \n",
-       "unique                      346               6413   \n",
-       "top                  2020-03-13         202024182H   \n",
-       "freq                         62                  3   \n",
+       "       Entity Registration Date Entity Profile UEN           Entity Name  \\\n",
+       "count                      6613               6613                  6613   \n",
+       "unique                      346               6413                  6606   \n",
+       "top                  2020-03-13         202030842M  UNBEATABLE PTE. LTD.   \n",
+       "freq                         62                  3                     2   \n",
        "\n",
-       "                        Entity Name         Primary Section Description  \n",
-       "count                          6613                                6613  \n",
-       "unique                         6606                                   1  \n",
-       "top     MRJS INCORPORATED PTE. LTD.  FINANCIAL AND INSURANCE ACTIVITIES  \n",
-       "freq                              2                                6613  "
+       "               Primary Section Description  \n",
+       "count                                 6613  \n",
+       "unique                                   1  \n",
+       "top     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "freq                                  6613  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"20210311_v0.2-FSI.csv\")\n",
+    "input_file = \"20210311_v0.2-FSI\" # do not put file extension\n",
     "\n",
-    "df.describe()\n"
+    "df = pd.read_csv(\"{}.csv\".format(input_file))\n",
+    "\n",
+    "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity Registration Date</th>\n",
+       "      <th>Entity Profile UEN</th>\n",
+       "      <th>Entity Name</th>\n",
+       "      <th>Primary Section Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-09</td>\n",
+       "      <td>53408118E</td>\n",
+       "      <td>ST HOMES</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-13</td>\n",
+       "      <td>53408219W</td>\n",
+       "      <td>AGNES OH ORGANISATION</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-13</td>\n",
+       "      <td>53408244X</td>\n",
+       "      <td>ONE SG HOLDING</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-14</td>\n",
+       "      <td>53408260B</td>\n",
+       "      <td>CARMINE MOON</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-16</td>\n",
+       "      <td>53408386B</td>\n",
+       "      <td>1ST LG MONEY CHANGER</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6608</th>\n",
+       "      <td>2020-12-17</td>\n",
+       "      <td>T20VC0183A</td>\n",
+       "      <td>SEAVI ADVENT EQUITY VII FUND VCC</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6609</th>\n",
+       "      <td>2020-12-23</td>\n",
+       "      <td>T20VC0185D</td>\n",
+       "      <td>WELLINGTON MANAGEMENT FUNDS (SINGAPORE) VCC</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6610</th>\n",
+       "      <td>2020-12-23</td>\n",
+       "      <td>T20VC0187G</td>\n",
+       "      <td>PENCO CAPITAL VCC</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6611</th>\n",
+       "      <td>2020-12-23</td>\n",
+       "      <td>T20VC0190G</td>\n",
+       "      <td>RAINMAKING VENTURES (S) VCC</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6612</th>\n",
+       "      <td>2020-12-24</td>\n",
+       "      <td>T20VC0192K</td>\n",
+       "      <td>HERITAS CAPITAL VCC</td>\n",
+       "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6613 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Entity Registration Date Entity Profile UEN  \\\n",
+       "0                  2020-01-09          53408118E   \n",
+       "1                  2020-01-13          53408219W   \n",
+       "2                  2020-01-13          53408244X   \n",
+       "3                  2020-01-14          53408260B   \n",
+       "4                  2020-01-16          53408386B   \n",
+       "...                       ...                ...   \n",
+       "6608               2020-12-17         T20VC0183A   \n",
+       "6609               2020-12-23         T20VC0185D   \n",
+       "6610               2020-12-23         T20VC0187G   \n",
+       "6611               2020-12-23         T20VC0190G   \n",
+       "6612               2020-12-24         T20VC0192K   \n",
+       "\n",
+       "                                      Entity Name  \\\n",
+       "0                                        ST HOMES   \n",
+       "1                           AGNES OH ORGANISATION   \n",
+       "2                                  ONE SG HOLDING   \n",
+       "3                                    CARMINE MOON   \n",
+       "4                            1ST LG MONEY CHANGER   \n",
+       "...                                           ...   \n",
+       "6608             SEAVI ADVENT EQUITY VII FUND VCC   \n",
+       "6609  WELLINGTON MANAGEMENT FUNDS (SINGAPORE) VCC   \n",
+       "6610                            PENCO CAPITAL VCC   \n",
+       "6611                  RAINMAKING VENTURES (S) VCC   \n",
+       "6612                          HERITAS CAPITAL VCC   \n",
+       "\n",
+       "             Primary Section Description  \n",
+       "0     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "1     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "2     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "3     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "4     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "...                                  ...  \n",
+       "6608  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "6609  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "6610  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "6611  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "6612  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "\n",
+       "[6613 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for id=4 \"1ST LG MONEY CHANGER singapore website\"\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'parse_qs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-25a5e9bf37ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mlink\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlinks\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_qs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murlparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'parse_qs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import bs4\n",
+    "import re\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "url = \"https://www.google.com/search?q={}\"\n",
+    "output_file = \"{}-result.csv\".format(input_file)\n",
+    "size = len(df) # size of df\n",
+    "for i in range(4, 5):\n",
+    "    entity = df.loc[i]\n",
+    "    entity_name = entity[2]\n",
+    "    query = \"{} singapore website\".format(entity_name)\n",
+    "    print(\"Searching for id={} \\\"{}\\\"\".format(i, query))\n",
+    "    \n",
+    "    req = requests.get(url.format(query))\n",
+    "    soup = bs4.BeautifulSoup(req.text, \"html.parser\")\n",
+    "    headers = soup.find_all(\"h3\")\n",
+    "#     links = soup.find_all(\"div\", class_=\"kCrYT\") # html class for google search\n",
+    "\n",
+    "#     print(soup)\n",
+    "    links = soup.find_all(href=re.compile(r'\\/url\\?q='))\n",
+    "    \n",
+    "#     for link in links:\n",
+    "#         data = parse_qs(urlparse(link).query)\n",
+    "#         print(data)\n",
+    "    \n",
+    "#     print(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
