feat: url parser

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "      <th>top</th>\n",
        "      <td>2020-03-13</td>\n",
        "      <td>202030842M</td>\n",
-       "      <td>UNBEATABLE PTE. LTD.</td>\n",
+       "      <td>KPN GLOBAL PTE. LTD.</td>\n",
        "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -79,7 +79,7 @@
        "       Entity Registration Date Entity Profile UEN           Entity Name  \\\n",
        "count                      6613               6613                  6613   \n",
        "unique                      346               6413                  6606   \n",
-       "top                  2020-03-13         202030842M  UNBEATABLE PTE. LTD.   \n",
+       "top                  2020-03-13         202030842M  KPN GLOBAL PTE. LTD.   \n",
        "freq                         62                  3                     2   \n",
        "\n",
        "               Primary Section Description  \n",
@@ -89,7 +89,7 @@
        "freq                                  6613  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[6613 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,17 +279,6 @@
      "output_type": "stream",
      "text": [
       "Searching for id=4 \"1ST LG MONEY CHANGER singapore website\"\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'parse_qs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-59-25a5e9bf37ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mlink\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlinks\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_qs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murlparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'parse_qs' is not defined"
      ]
     }
    ],
@@ -303,24 +292,30 @@
     "output_file = \"{}-result.csv\".format(input_file)\n",
     "size = len(df) # size of df\n",
     "for i in range(4, 5):\n",
-    "    entity = df.loc[i]\n",
-    "    entity_name = entity[2]\n",
+    "    entity = df.loc[i] # current row record\n",
+    "    entity_name = entity[2] # entity name\n",
     "    query = \"{} singapore website\".format(entity_name)\n",
+    "    \n",
     "    print(\"Searching for id={} \\\"{}\\\"\".format(i, query))\n",
     "    \n",
+    "    # prepare to search \"<entity name> singapore website\" for more localised search context\n",
     "    req = requests.get(url.format(query))\n",
     "    soup = bs4.BeautifulSoup(req.text, \"html.parser\")\n",
     "    headers = soup.find_all(\"h3\")\n",
     "#     links = soup.find_all(\"div\", class_=\"kCrYT\") # html class for google search\n",
     "\n",
     "#     print(soup)\n",
-    "    links = soup.find_all(href=re.compile(r'\\/url\\?q='))\n",
+    "    links = soup.find_all(href=re.compile(r'\\/url\\?q=')) # pick top 10 search results & its link\n",
     "    \n",
-    "#     for link in links:\n",
-    "#         data = parse_qs(urlparse(link).query)\n",
-    "#         print(data)\n",
+    "    for i in range(10):\n",
+    "        url = links[i].get('href')\n",
+    "        print(urlparse(url))\n",
+    "        \n",
+    "        \n",
+    "        # \"/url?q=https://www.sgpbusiness.com/company/1st-Lg-Money-Changer&sa=U&ved=2ahUKEwjpspb0la3vAhWiJzQIHY-7D-UQFjADegQIChAB&usg=AOvVaw3-P4IBA7DZtL3OsdUAHOD5\"\n",
     "    \n",
-    "#     print(links)"
+    "        # next, parse to grab URL parameter\n",
+    "    \n"
    ]
   },
   {
