feat: url parser

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -60,8 +60,8 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>2020-03-13</td>\n",
-       "      <td>202030842M</td>\n",
-       "      <td>KPN GLOBAL PTE. LTD.</td>\n",
+       "      <td>202031567E</td>\n",
+       "      <td>TARGET MULTI ASSET FUND VCC</td>\n",
        "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -76,17 +76,17 @@
        "</div>"
       ],
       "text/plain": [
-       "       Entity Registration Date Entity Profile UEN           Entity Name  \\\n",
-       "count                      6613               6613                  6613   \n",
-       "unique                      346               6413                  6606   \n",
-       "top                  2020-03-13         202030842M  KPN GLOBAL PTE. LTD.   \n",
-       "freq                         62                  3                     2   \n",
+       "       Entity Registration Date Entity Profile UEN  \\\n",
+       "count                      6613               6613   \n",
+       "unique                      346               6413   \n",
+       "top                  2020-03-13         202031567E   \n",
+       "freq                         62                  3   \n",
        "\n",
-       "               Primary Section Description  \n",
-       "count                                 6613  \n",
-       "unique                                   1  \n",
-       "top     FINANCIAL AND INSURANCE ACTIVITIES  \n",
-       "freq                                  6613  "
+       "                        Entity Name         Primary Section Description  \n",
+       "count                          6613                                6613  \n",
+       "unique                         6606                                   1  \n",
+       "top     TARGET MULTI ASSET FUND VCC  FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "freq                              2                                6613  "
       ]
      },
      "execution_count": 3,
@@ -271,14 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching for id=4 \"1ST LG MONEY CHANGER singapore website\"\n"
+      "Searching for id=4 \"1ST LG MONEY CHANGER singapore website\"\n",
+      "{'https://eservices.mas.gov.sg/fid/institution?sector=Payments', 'https://www.sgpbusiness.com/company/1st-Lg-Money-Changer', 'https://www.worldremit.com/en/singapore', 'https://sso.agc.gov.sg/SL-Supp/S687-2005/Published/20080131?DocDate=20051028170000', 'https://opengovsg.com/corporate/53408386B', 'https://www.thinmargin.com/', 'https://www.worldtravelguide.net/guides/asia/singapore/money-duty-free/', 'https://moneytransferexchange.com/1st-lg-remittance-pte-ltd-currency-exchange-in-singapore/', 'https://www.mas.gov.sg/regulation/payments/money-changing-licence', 'https://cashchanger.co/singapore/mc/jamserah-jas-money-changer/99'}\n"
      ]
     }
    ],
@@ -286,7 +287,7 @@
     "import requests\n",
     "import bs4\n",
     "import re\n",
-    "from urllib.parse import urlparse\n",
+    "from urllib.parse import urlparse, parse_qs\n",
     "\n",
     "url = \"https://www.google.com/search?q={}\"\n",
     "output_file = \"{}-result.csv\".format(input_file)\n",
@@ -307,9 +308,17 @@
     "#     print(soup)\n",
     "    links = soup.find_all(href=re.compile(r'\\/url\\?q=')) # pick top 10 search results & its link\n",
     "    \n",
+    "    links_extracted = set()\n",
+    "    \n",
+    "    # file write here\n",
+    "    \n",
     "    for i in range(10):\n",
-    "        url = links[i].get('href')\n",
-    "        print(urlparse(url))\n",
+    "        google_url = links[i].get('href')\n",
+    "        url = parse_qs(google_url)\n",
+    "        links_extracted.add(url['/url?q'][0])\n",
+    "    \n",
+    "    print(links_extracted)\n",
+    "        # write out dataframe record, then APPEND links_extracted\n",
     "        \n",
     "        \n",
     "        # \"/url?q=https://www.sgpbusiness.com/company/1st-Lg-Money-Changer&sa=U&ved=2ahUKEwjpspb0la3vAhWiJzQIHY-7D-UQFjADegQIChAB&usg=AOvVaw3-P4IBA7DZtL3OsdUAHOD5\"\n",
