--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -290,6 +290,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1\n",
+    "\n",
+    "We first begin by crawling for the website addresses from existing data sources, so that we can "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -382,7 +391,10 @@
    "source": [
     "### Old Codes\n",
     "\n",
-    "The following code attempts to crawl Google Search for the first 10 results, then i"
+    "The following code attempts to:\n",
+    "\n",
+    "- crawl Google Search for the first 10 results\n",
+    "- then it grabs the URLs so that we can crawl them again for the metadata"
    ]
   },
   {
