feat: test rotating proxy

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -295,7 +295,35 @@
    "source": [
     "### Part 1\n",
     "\n",
-    "We first begin by crawling for the website addresses from existing data sources, so that we can "
+    "We first begin by crawling for the website addresses from existing data sources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'origin': '52.163.80.26'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import bs4\n",
+    "import re\n",
+    "from urllib.parse import urlparse, parse_qs\n",
+    "import time\n",
+    "\n",
+    "url = 'https://httpbin.org/ip'\n",
+    "proxies = {\n",
+    "    \"http\": 'http://136.233.215.139:80',\n",
+    "}\n",
+    "response = requests.get(url, proxies=proxies)\n",
+    "print(response.json())"
    ]
   },
   {
@@ -319,12 +347,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import bs4\n",
-    "import re\n",
-    "from urllib.parse import urlparse, parse_qs\n",
-    "import time\n",
-    "\n",
     "# Setup User Agent headers, attempt to imitate a \"browser-like\" request to the webpage\n",
     "headers = requests.utils.default_headers()\n",
     "headers.update({\n",
@@ -464,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
