feat: update to opengovsg

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "      <th>top</th>\n",
        "      <td>2020-03-13</td>\n",
        "      <td>202036310W</td>\n",
-       "      <td>SEVIORA HOLDINGS PTE. LTD.</td>\n",
+       "      <td>UNBEATABLE PTE. LTD.</td>\n",
        "      <td>FINANCIAL AND INSURANCE ACTIVITIES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,20 +100,20 @@
        "</div>"
       ],
       "text/plain": [
-       "       Entity Registration Date Entity Profile UEN  \\\n",
-       "count                      6389               6389   \n",
-       "unique                      342               6197   \n",
-       "top                  2020-03-13         202036310W   \n",
-       "freq                         60                  3   \n",
+       "       Entity Registration Date Entity Profile UEN           Entity Name  \\\n",
+       "count                      6389               6389                  6389   \n",
+       "unique                      342               6197                  6382   \n",
+       "top                  2020-03-13         202036310W  UNBEATABLE PTE. LTD.   \n",
+       "freq                         60                  3                     2   \n",
        "\n",
-       "                       Entity Name         Primary Section Description  \n",
-       "count                         6389                                6389  \n",
-       "unique                        6382                                   1  \n",
-       "top     SEVIORA HOLDINGS PTE. LTD.  FINANCIAL AND INSURANCE ACTIVITIES  \n",
-       "freq                             2                                6389  "
+       "               Primary Section Description  \n",
+       "count                                 6389  \n",
+       "unique                                   1  \n",
+       "top     FINANCIAL AND INSURANCE ACTIVITIES  \n",
+       "freq                                  6389  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "[6389 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,37 +366,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Searching for id=323 202002304H AMTD GLOBAL MARKETS PTE. LTD.\n",
-      "    [ERROR] Failed at id=323 retry=0 error=1, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:34 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=1 error=list index out of range, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:38 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=2 error=list index out of range, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:41 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=3 error=list index out of range, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:42 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=4 error=list index out of range, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=5 error=1, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:43 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=6 error=list index out of range, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:29:45 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=7 error=list index out of range, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=8 error=1, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:30:01 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=9 error=list index out of range, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=10 error=1, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=11 error=1, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=12 error=1, retrying...\n",
-      "    [ERROR] Failed at id=323 retry=13 error=1, retrying...\n",
-      "{'Server': 'nginx/1.14.0 (Ubuntu)', 'Date': 'Wed, 17 Mar 2021 02:30:02 GMT', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'X-Powered-By': 'Express', 'Location': 'https://sgpgrid.com/too-many'}\n",
-      "    [ERROR] Failed at id=323 retry=14 error=list index out of range, retrying...\n"
+      "Searching for id=1 202000015R JULIAN GREY VENTURES PTE. LTD.\n",
+      "    [ERROR] Failed at id=1 retry=0 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=1 error=1, retrying...\n",
+      "[<td>Primary SSIC Code</td>, <td>\n",
+      "<a href=\"https://opengovsg.com/corporate?ssic=64300\">64300: TRUSTS, FUNDS AND SIMILAR FINANCIAL ENTITIES (EG COLLECTIVE PORTFOLIO INVESTMENT FUNDS (EXCLUDING THOSE WITH RENTAL INCOME))</a> </td>]\n",
+      "    [ERROR] Failed at id=1 retry=2 error='list' object cannot be interpreted as an integer, retrying...\n",
+      "[<td>Primary SSIC Code</td>, <td>\n",
+      "<a href=\"https://opengovsg.com/corporate?ssic=64300\">64300: TRUSTS, FUNDS AND SIMILAR FINANCIAL ENTITIES (EG COLLECTIVE PORTFOLIO INVESTMENT FUNDS (EXCLUDING THOSE WITH RENTAL INCOME))</a> </td>]\n",
+      "    [ERROR] Failed at id=1 retry=3 error='list' object cannot be interpreted as an integer, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=4 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=5 error=1, retrying...\n",
+      "[<td>Primary SSIC Code</td>, <td>\n",
+      "<a href=\"https://opengovsg.com/corporate?ssic=64300\">64300: TRUSTS, FUNDS AND SIMILAR FINANCIAL ENTITIES (EG COLLECTIVE PORTFOLIO INVESTMENT FUNDS (EXCLUDING THOSE WITH RENTAL INCOME))</a> </td>]\n",
+      "    [ERROR] Failed at id=1 retry=6 error='list' object cannot be interpreted as an integer, retrying...\n",
+      "[<td>Primary SSIC Code</td>, <td>\n",
+      "<a href=\"https://opengovsg.com/corporate?ssic=64300\">64300: TRUSTS, FUNDS AND SIMILAR FINANCIAL ENTITIES (EG COLLECTIVE PORTFOLIO INVESTMENT FUNDS (EXCLUDING THOSE WITH RENTAL INCOME))</a> </td>]\n",
+      "    [ERROR] Failed at id=1 retry=7 error='list' object cannot be interpreted as an integer, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=8 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=9 error=1, retrying...\n",
+      "[<td>Primary SSIC Code</td>, <td>\n",
+      "<a href=\"https://opengovsg.com/corporate?ssic=64300\">64300: TRUSTS, FUNDS AND SIMILAR FINANCIAL ENTITIES (EG COLLECTIVE PORTFOLIO INVESTMENT FUNDS (EXCLUDING THOSE WITH RENTAL INCOME))</a> </td>]\n",
+      "    [ERROR] Failed at id=1 retry=10 error='list' object cannot be interpreted as an integer, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=11 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=12 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=13 error=1, retrying...\n",
+      "    [ERROR] Failed at id=1 retry=14 error=1, retrying...\n"
      ]
     }
    ],
@@ -408,8 +410,9 @@
     "})\n",
     "\n",
     "# Target URL to scrape\n",
-    "url = \"http://3.0.205.74/search-results?target={\\\"value\\\":\\\"Registration Number\\\",\\\"label\\\":\\\"Registration Number\\\",\\\"searchTarget\\\":\\\"registrationNumber\\\"}&value=\"\n",
+    "# url = \"http://3.0.205.74/search-results?target={\\\"value\\\":\\\"Registration Number\\\",\\\"label\\\":\\\"Registration Number\\\",\\\"searchTarget\\\":\\\"registrationNumber\\\"}&value=\"\n",
     "# url2 = \"https://sgpgrid.com/search-results?target={\\\"value\\\":\\\"Company Name\\\",\\\"label\\\":\\\"Company Name\\\",\\\"searchTarget\\\":\\\"fullName\\\"}&value=\"\n",
+    "url = \"https://opengovsg.com/corporate/\"\n",
     "\n",
     "output_file = \"{}-result.csv\".format(input_file)\n",
     "size = len(df) # Size of dataset\n",
@@ -419,7 +422,7 @@
     "# f.write(\"Entity Registration Date,Entity Profile UEN,Entity Name,Primary Section Description,Description,Website,Industry\\n\")\n",
     "\n",
     "# Finding Description, Website, Industry, hardcode at 5 requests just to test\n",
-    "for i in range(323, 324):\n",
+    "for i in range(1, 2):\n",
     "    entity = df.loc[i] # current row record\n",
     "    entity_uen = entity[1] # entity UEN\n",
     "    entity_name = entity[2] # entity name\n",
@@ -429,8 +432,8 @@
     "    \n",
     "    for j in range(max_tries):\n",
     "        try:\n",
-    "            random_stuff = str(random.random()) + \"&utm_source=linkedin&utm_medium=unpaidsoc&utm_campaign=\"\n",
-    "            url_new = url + entity_uen + \"&ra=\" + random_stuff\n",
+    "            random_stuff = str(random.random()) + \"&utm_source=linkedin&utm_medium=unpaid&utm_campaign=\"\n",
+    "            url_new = url + entity_uen + \"?ra=\" + random_stuff\n",
     "            # print(url_new)\n",
     "            \n",
     "            \n",
@@ -439,24 +442,20 @@
     "#             req = requests.get(url_new, headers=headers, proxies=proxies[id])\n",
     "            \n",
     "            # no proxy\n",
-    "            resp = requests.get(url_new, headers=headers, proxies=proxies[id], allow_redirects=False)\n",
-    "            print(resp.headers)\n",
+    "            resp = requests.get(url_new, headers=headers, proxies=proxies[id])\n",
+    "#             print(resp.headers)\n",
     "            \n",
     "            soup = bs4.BeautifulSoup(resp.text, \"html.parser\")\n",
     "            \n",
     "            # Now look for elements\n",
-    "            columns = soup.find_all(\"div\", {\"class\": \"rt-td table-cell\"})\n",
+    "            tables = soup.find_all(\"table\", {\"class\": \"table table-striped table-hover table-dl\"})\n",
+    "            \n",
     "\n",
     "            # we know that column 0 is description (sometimes same as SSIC), 3 is website, 5 is SSIC\n",
-    "\n",
-    "#             print(soup)\n",
-    "\n",
-    "            description = columns[0].get_text()\n",
-    "            website = columns[3].get_text()\n",
-    "            ssic = columns[5].get_text()\n",
-    "\n",
-    "            print(\"*Found company info\", description, website, ssic)\n",
-    "\n",
+    "            \n",
+    "            ssic_table_data = tables[1].find_all(\"td\")\n",
+    "            ssic_table_data_count = len(ssic_table_data)\n",
+    "            \n",
     "            # Format existing data as CSV\n",
     "            formatted_csv_row = \"{},{},{},{}\".format(\n",
     "                entity[0],\n",
@@ -464,9 +463,19 @@
     "                entity[2],\n",
     "                entity[3]\n",
     "            )\n",
+    "            \n",
+    "            data = []\n",
+    "            print(ssic_table_data)\n",
     "\n",
-    "            # Then append SGPGrid's data...\n",
-    "            formatted_csv_row += \",\\\"{}\\\",\\\"{}\\\",\\\"{}\\\"\".format(description, website, ssic)\n",
+    "            \n",
+    "            for k in range(1, ssic_table_data_count, 2):\n",
+    "                data.append(ssic_table_data[k].get_text().strip())\n",
+    "\n",
+    "            # Then append scraped data...\n",
+    "            data_count = len(data)\n",
+    "            for l in range(data):\n",
+    "                formatted_csv_row += \",\\\"{}\\\"\".format(data[l])\n",
+    "#             formatted_csv_row += \",\\\"{}\\\",\\\"{}\\\",\\\"{}\\\"\".format(description, website, ssic)\n",
     "\n",
     "            f = open(output_file, \"a\")\n",
     "            f.write(formatted_csv_row + \"\\n\")\n",
@@ -563,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
