--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -23670,7 +23670,7 @@
     "            ssic_table_data_count = len(ssic_table_data)\n",
     "            \n",
     "            # Format existing data as CSV\n",
-    "            formatted_csv_row = \"{},{},{},{}\".format(\n",
+    "            formatted_csv_row = \"\\\"{}\\\",{},{},{}\".format(\n",
     "                entity[0],\n",
     "                entity[1],\n",
     "                entity[2],\n",
