--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -852,9 +852,8 @@
    ],
    "source": [
     "# Target URL to scrape\n",
-    "#\n",
     "\n",
-    "url = \"https://www.google.com/search?q={}&sourceid=chrome&ie=UTF-8\"\n",
+    "url = \"http://3.0.205.74/search-results?target={\\\"value\\\":\\\"Registration Number\\\",\\\"label\\\":\\\"Registration Number\\\",\\\"searchTarget\\\":\\\"registrationNumber\\\"}&value=\"\n",
     "output_file = \"{}-result.csv\".format(input_file)\n",
     "size = len(df) # Size of dataset\n",
     "\n",
@@ -864,14 +863,6 @@
     "    entity = df.loc[i] # current row record\n",
     "    entity_uen = entity[1] # entity UEN\n",
     "    entity_name = entity[2] # entity name\n",
-    "    \n",
-    "    # Randomise search terms\n",
-    "    search_terms = [\n",
-    "        \"{} singapore website\".format(entity_name),\n",
-    "        \"{} sg website\".format(entity_name)\n",
-    "    ]\n",
-    "    \n",
-    "    search_terms_count = len(search_terms)\n",
     "    \n",
     "    # Prepare the CSV to write out\n",
     "    formatted_csv_row = \"\\\"{}\\\",\\\"{}\\\",\\\"{}\\\",\\\"{}\\\"\".format(\n",
@@ -886,14 +877,13 @@
     "    \n",
     "    for j in range(max_tries):\n",
     "        try:\n",
-    "            id = random.randint(0, search_terms_count)\n",
-    "            search_term = search_terms[id]\n",
-    "            url_new = url.format(search_term)\n",
-    "            \n",
+    "            random_stuff = \"&ra={}&utm_source=facebook&utm_medium=facebook&utm_campaign=\".format(str(random.random()))\n",
+    "            url_new = url + entity_uen + random_stuff\n",
+    "\n",
     "            # Setup User Agent headers, attempt to imitate a \"browser-like\" request to the webpage\n",
     "            headers = requests.utils.default_headers()\n",
     "            headers.update({\n",
-    "                'User-Agent': get_random_user_agent()\n",
+    "                \"User-Agent\": get_random_user_agent()\n",
     "            })\n",
     "\n",
     "            # Pick a random rotating proxy\n",
@@ -907,20 +897,21 @@
     "            print(soup)\n",
     "            \n",
     "            # Now look for the specific elements\n",
-    "            headers = soup.find_all(\"h3\")\n",
-    "            links = soup.find_all(href=re.compile(r'\\/url\\?q=')) # pick top 10 search results & its link\n",
+    "            columns = soup.find_all(\"div\", {\"class\": \"rt-td table-cell\"})\n",
     "            \n",
-    "            for i in range(10):\n",
-    "                google_url = links[i].get(\"href\").strip()\n",
-    "                parsed_url = parse_qs(google_url)\n",
-    "                formatted_csv_row += \",{}\".format(parsed_url[\"/url?q\"][0])\n",
+    "            description = columns[0].get_text()\n",
+    "            website = columns[3].get_text()\n",
+    "            ssic = columns[5].get_text()\n",
     "            \n",
+    "            # Then append SGPGrid's data...\n",
+    "            formatted_csv_row += \",\\\"{}\\\",\\\"{}\\\",\\\"{}\\\"\".format(description, website, ssic)\n",
+    "\n",
     "            # Finally we write out to file by appending\n",
     "            f = open(output_file, \"a\")\n",
     "            f.write(formatted_csv_row + \"\\n\")\n",
     "            f.close()\n",
     "            \n",
-    "            print(\"    [SUCCESS] Wrote to file for id={} on retry={}\".format(i, j))\n",
+    "            print(\"    [SUCCESS] Found company info for id={} on retry={}\".format(i, j), description, website, ssic)\n",
     "    \n",
     "            break # next for loop\n",
     "        except Exception as e:\n",
@@ -932,7 +923,7 @@
     "                f.close()\n",
     "            continue # retry\n",
     "\n",
-    "    time.sleep(random.randint(1, 3)) # Randomise the waiting time\n"
+    "    time.sleep(random.randint(1, 5)) # Randomise the waiting time\n"
    ]
   },
   {
@@ -953,41 +944,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # Target URL to scrape\n",
     "\n",
-    "# f = open(output_file, \"w\")\n",
+    "# url = \"https://www.google.com/search?q={}&sourceid=chrome&ie=UTF-8\"\n",
+    "# output_file = \"{}-result.csv\".format(input_file)\n",
+    "# size = len(df) # Size of dataset\n",
     "\n",
-    "# f.write(\"Entity Registration Date,Entity Profile UEN,Entity Name,Primary Section Description,Link 1,Link 2,Link 3,Link 4,Link 5,Link 6,Link 7,Link 8,Link 9,Link 10\\n\")\n",
+    "# max_tries = 15\n",
     "\n",
-    "# for i in range(1, 20):\n",
+    "# for i in range(0, size):\n",
     "#     entity = df.loc[i] # current row record\n",
+    "#     entity_uen = entity[1] # entity UEN\n",
     "#     entity_name = entity[2] # entity name\n",
-    "#     query = \"{} singapore website\".format(entity_name)\n",
     "    \n",
-    "#     print(\"Searching for id={} \\\"{}\\\"\".format(i, query))\n",
+    "#     # Randomise search terms\n",
+    "#     search_terms = [\n",
+    "#         \"{} singapore website\".format(entity_name),\n",
+    "#         \"{} sg website\".format(entity_name)\n",
+    "#     ]\n",
     "    \n",
-    "#     # prepare to search \"<entity name> singapore website\" for more localised search context\n",
-    "#     req = requests.get(url.format(query))\n",
-    "#     soup = bs4.BeautifulSoup(req.text, \"html.parser\")\n",
-    "#     headers = soup.find_all(\"h3\")\n",
-    "#     links = soup.find_all(href=re.compile(r'\\/url\\?q=')) # pick top 10 search results & its link\n",
+    "#     search_terms_count = len(search_terms)\n",
     "    \n",
-    "#     # file write here\n",
-    "    \n",
-    "#     formatted_csv_row = \"{},{},{},{}\".format(\n",
+    "#     # Prepare the CSV to write out\n",
+    "#     formatted_csv_row = \"\\\"{}\\\",\\\"{}\\\",\\\"{}\\\",\\\"{}\\\"\".format(\n",
     "#         entity[0],\n",
     "#         entity[1],\n",
     "#         entity[2],\n",
     "#         entity[3]\n",
     "#     )\n",
-    "    \n",
-    "#     for i in range(10):\n",
-    "#         google_url = links[i].get('href')\n",
-    "#         parsed_url = parse_qs(google_url)\n",
-    "#         formatted_csv_row += \",{}\".format(parsed_url['/url?q'][0])\n",
-    "#     f.write(formatted_csv_row + \"\\n\")\n",
-    "# f.close()\n",
     "\n",
-    "\n"
+    "#     # Accessing the webpage\n",
+    "#     print(\"Searching for id={} {} {}\".format(i, entity_uen, entity_name))\n",
+    "    \n",
+    "#     for j in range(max_tries):\n",
+    "#         try:\n",
+    "#             id = random.randint(0, search_terms_count)\n",
+    "#             search_term = search_terms[id]\n",
+    "#             url_new = url.format(search_term)\n",
+    "            \n",
+    "#             # Setup User Agent headers, attempt to imitate a \"browser-like\" request to the webpage\n",
+    "#             headers = requests.utils.default_headers()\n",
+    "#             headers.update({\n",
+    "#                 'User-Agent': get_random_user_agent()\n",
+    "#             })\n",
+    "\n",
+    "#             # Pick a random rotating proxy\n",
+    "#             id = random.randint(0, proxy_count)\n",
+    "            \n",
+    "#             # Now, we query the target URL using a random proxy\n",
+    "#             resp = requests.get(url_new, headers=headers, proxies=proxies[id])\n",
+    "            \n",
+    "#             # Use BeautifulSoup to parse the HTML\n",
+    "#             soup = bs4.BeautifulSoup(resp.text, \"html.parser\")\n",
+    "#             print(soup)\n",
+    "            \n",
+    "#             # Now look for the specific elements\n",
+    "#             headers = soup.find_all(\"h3\")\n",
+    "#             links = soup.find_all(href=re.compile(r'\\/url\\?q=')) # pick top 10 search results & its link\n",
+    "            \n",
+    "#             for i in range(10):\n",
+    "#                 google_url = links[i].get(\"href\").strip()\n",
+    "#                 parsed_url = parse_qs(google_url)\n",
+    "#                 formatted_csv_row += \",{}\".format(parsed_url[\"/url?q\"][0])\n",
+    "            \n",
+    "#             # Finally we write out to file by appending\n",
+    "#             f = open(output_file, \"a\")\n",
+    "#             f.write(formatted_csv_row + \"\\n\")\n",
+    "#             f.close()\n",
+    "            \n",
+    "#             print(\"    [SUCCESS] Wrote to file for id={} on retry={}\".format(i, j))\n",
+    "    \n",
+    "#             break # next for loop\n",
+    "#         except Exception as e:\n",
+    "#             print(\"    [ERROR] Failed at id={} retry={} error={}, retrying...\".format(i, j, e))\n",
+    "            \n",
+    "#             if j == max_tries - 1:\n",
+    "#                 f = open(\"{}-failed.csv\".format(input_file), \"a\")\n",
+    "#                 f.write(formatted_csv_row)\n",
+    "#                 f.close()\n",
+    "#             continue # retry\n",
+    "\n",
+    "#     time.sleep(random.randint(1, 3)) # Randomise the waiting time\n"
    ]
   },
   {
@@ -1014,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
