feat: sgpgrid update

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -210,7 +210,122 @@
       "Searching for id=22 53407808K STUDIO NAO\n",
       "    [SUCCESS] Found company info for id=22 on retry=0 FASHION (INCLUDING ACCESSORIES) DESIGN SERVICES  FASHION (INCLUDING ACCESSORIES) DESIGN SERVICES\n",
       "Searching for id=23 53407813C TENET ASSURANCE\n",
-      "    [ERROR] Failed at id=23 retry=0 error=list index out of range, retrying...\n"
+      "    [ERROR] Failed at id=23 retry=0 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=1 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=2 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=3 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=4 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=5 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=6 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=7 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=8 error=12, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=9 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=10 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=11 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=12 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=13 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=23 retry=14 error=12, retrying...\n",
+      "Searching for id=24 53407814A MAKCIKALERTSG\n",
+      "    [SUCCESS] Found company info for id=24 on retry=0 BROADCAST OFFERS, PROMOS, DISCOUNTS IN SINGAPORE. REVIEW PRODUCTS  WEB PORTALS (E.G. WEB SEARCH, SOCIAL NETWORKING SITES, ONLINE MARKETPLACE, REVIEW PORTALS)\n",
+      "Searching for id=25 53407820J RENTC\n",
+      "    [SUCCESS] Found company info for id=25 on retry=0 RENT A COMPANION ONLINE MOBILE APPLICATION MARKET PLACE  PUBLISHING OF OTHER SOFTWARE/APPLICATIONS (NON-GAMES)\n",
+      "Searching for id=26 53407821D COTERIE SERVICES\n",
+      "    [SUCCESS] Found company info for id=26 on retry=0 GENERAL BUILDING ENGINEERING DESIGN AND CONSULTANCY SERVICES  GENERAL BUILDING ENGINEERING DESIGN AND CONSULTANCY SERVICES\n",
+      "Searching for id=27 53407825K SENTIMENTOGRAPHY\n",
+      "    [SUCCESS] Found company info for id=27 on retry=0 PHOTOGRAPHY, VIDEOGRAPHY & EDITING  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=28 53407826E BLOOMINGTREE\n",
+      "    [SUCCESS] Found company info for id=28 on retry=0 PRODUCTION OF ADVERTISEMENTS, CORPORATE VIDEOS AND EVENT VIDEOS  PRODUCTION OF ADVERTISEMENTS, CORPORATE VIDEOS AND EVENT VIDEOS\n",
+      "Searching for id=29 53407831A OTSUKA TECHNOLOGY\n",
+      "    [SUCCESS] Found company info for id=29 on retry=0 MOBILE APPLICATIONS FOR ECOM  DEVELOPMENT OF E-COMMERCE APPLICATIONS\n",
+      "Searching for id=30 53407834J MP ESSENTIALS\n",
+      "    [ERROR] Failed at id=30 retry=0 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=30 on retry=1 FASHION (INCLUDING ACCESSORIES) DESIGN SERVICES  FASHION (INCLUDING ACCESSORIES) DESIGN SERVICES\n",
+      "Searching for id=31 53407835D DE @SPACE DESIGN\n",
+      "    [SUCCESS] Found company info for id=31 on retry=0 INTERIOR DESIGN SERVICES  INTERIOR DESIGN SERVICES\n",
+      "Searching for id=32 53407839K SINGAPORE INSTITUTE OF FOOD AND BIOTECHNOLOGY INNOVATION\n",
+      "    [SUCCESS] Found company info for id=32 on retry=0 RESEARCH AND EXPERIMENTAL DEVELOPMENT ON BIOTECHNOLOGY, LIFE AND MEDICAL SCIENCE  RESEARCH AND EXPERIMENTAL DEVELOPMENT ON BIOTECHNOLOGY, LIFE AND MEDICAL SCIENCE\n",
+      "Searching for id=33 53407850L RAJENBROTHERS\n",
+      "    [SUCCESS] Found company info for id=33 on retry=0 1.WEDDING PHOTOGRAPHY 2.WEDDING VIDEO STYLISH  PHOTOGRAPHIC ACTIVITIES N.E.C.\n",
+      "Searching for id=34 53407857E JW CONSULTANCY SERVICES\n",
+      "    [ERROR] Failed at id=34 retry=0 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=34 on retry=1 PROVIDES CONSULTING ADVICE OR SERVISES  MANAGEMENT CONSULTANCY SERVICES (GENERAL)\n",
+      "Searching for id=35 53407862A MATCHGENICS\n",
+      "    [ERROR] Failed at id=35 retry=0 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=35 retry=1 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=35 on retry=2 BUSINESS MATCHING, BUSINESS NETWORKING   MANAGEMENT CONSULTANCY SERVICES (GENERAL)\n",
+      "Searching for id=36 53407875C IBBIS INNOVATION\n",
+      "    [SUCCESS] Found company info for id=36 on retry=0 RESEARCH ON NEW TECHNOLOGY USING CLOUD, DEEP LEARNING, ANALYTICS  RESEARCH AND EXPERIMENTAL DEVELOPMENT ON IT\n",
+      "Searching for id=37 53407879J BLU ENGINEERING\n",
+      "    [ERROR] Failed at id=37 retry=0 error=12, retrying...\n",
+      "    [ERROR] Failed at id=37 retry=1 error=list index out of range, retrying...\n",
+      "    [SUCCESS] Found company info for id=37 on retry=2 GENERAL BUILDING ENGINEERING DESIGN AND CONSULTANCY SERVICES  GENERAL BUILDING ENGINEERING DESIGN AND CONSULTANCY SERVICES\n",
+      "Searching for id=38 53407881L RAYGUN DESIGN\n",
+      "    [ERROR] Failed at id=38 retry=0 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=38 retry=1 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=38 on retry=2 EVENT STRUCTURE AND CAMPAIGN GRAPHIC DESIGN SERVICES  EXHIBITION STAND DESIGN SERVICES\n",
+      "Searching for id=39 53407885X PROSE ARCHITECTS\n",
+      "    [SUCCESS] Found company info for id=39 on retry=0 ARCHITECTURAL SERVICES  ARCHITECTURAL SERVICES\n",
+      "Searching for id=40 53407888E H LOFT STUDIO\n",
+      "    [ERROR] Failed at id=40 retry=0 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=40 on retry=1 PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=41 53407889C H7 GAMING\n",
+      "    [SUCCESS] Found company info for id=41 on retry=0 DEVELOPMENT OF COMPUTER GAMES  DEVELOPMENT OF COMPUTER GAMES\n",
+      "Searching for id=42 53407913W HAPPY BEAR DESIGN\n",
+      "    [ERROR] Failed at id=42 retry=0 error=12, retrying...\n",
+      "    [SUCCESS] Found company info for id=42 on retry=1 INTERIOR 3D DRAWING AND DESIGN  INTERIOR DESIGN SERVICES\n",
+      "Searching for id=43 53407914L APEX FINANCIAL ADVISORY\n",
+      "    [SUCCESS] Found company info for id=43 on retry=0 MANAGEMENT CONSULTANCY SERVICES (GENERAL)  MANAGEMENT CONSULTANCY SERVICES (GENERAL)\n",
+      "Searching for id=44 53407917B QUANTUM GROUPS\n",
+      "    [SUCCESS] Found company info for id=44 on retry=0 WEB PORTALS (E.G. WEB SEARCH, SOCIAL NETWORKING SITES, ONLINE MARKETPLACE, REVIEW PORTALS)  WEB PORTALS (E.G. WEB SEARCH, SOCIAL NETWORKING SITES, ONLINE MARKETPLACE, REVIEW PORTALS)\n",
+      "Searching for id=45 53407918X I BLACK SERVICES\n",
+      "    [SUCCESS] Found company info for id=45 on retry=0 TRANSPORTATION & INSTALLATION OF BANNERS , STICKERS AND EVENTS ACTIVITIES  ADVERTISING ACTIVITIES\n",
+      "Searching for id=46 53407919M BYBEN STUDIO SINGAPORE\n",
+      "    [SUCCESS] Found company info for id=46 on retry=0 PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=47 53407921X MECHFIX AUTOMATION\n",
+      "    [SUCCESS] Found company info for id=47 on retry=0 DESIGN AND BUILT FACTORY AUTOMATION MACHINE AND CONSULTANCY  ENGINEERING DESIGN AND CONSULTANCY ACTIVITIES N.E.C.\n",
+      "Searching for id=48 53407922M HANA DUL SET PHOTOBOOTH\n",
+      "    [SUCCESS] Found company info for id=48 on retry=0 PHOTOBOOTH SERVICES  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=49 53407925C GSI PHOTOGRAPHY AND VIDEOGRAPHY\n",
+      "    [ERROR] Failed at id=49 retry=0 error=list index out of range, retrying...\n",
+      "    [SUCCESS] Found company info for id=49 on retry=1 PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=50 53407927W SEBJAC ENTERPRISES\n",
+      "    [SUCCESS] Found company info for id=50 on retry=0 ONLINE MARKETING (WEB DESIGN AND WEBSITE SERVICES)  DEVELOPMENT OF OTHER SOFTWARE AND PROGRAMMING ACTIVITIES N.E.C.\n",
+      "Searching for id=51 53407933D PET TECH\n",
+      "    [SUCCESS] Found company info for id=51 on retry=0 DEVELOPMENT OF E-COMMERCE APPLICATIONS  DEVELOPMENT OF E-COMMERCE APPLICATIONS\n",
+      "Searching for id=52 53407951B BANG PHOTOGRAPHY\n",
+      "    [SUCCESS] Found company info for id=52 on retry=0 PORTRAIT PHOTOGRAPHY SERVICES  PHOTO TAKING SERVICES (EG PORTRAIT OR STUDIO PHOTOGRAPHY)\n",
+      "Searching for id=53 53407958W VBK BUSINESS CONSULTANCY\n",
+      "    [SUCCESS] Found company info for id=53 on retry=0 HEALTH SAFETY ENVIRONMENT QUALITY CONSULTANCY AND INTERNAL AUDITING SERVICES  MANAGEMENT CONSULTANCY SERVICES (GENERAL)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for id=54 53407984M HUNTINGMAMA\n",
+      "    [SUCCESS] Found company info for id=54 on retry=0 INTERNET DIRECTORY SERVICES  PUBLISHING OF DIRECTORIES AND MAILING LISTS (INCLUDING FINANCIAL DATABASES)\n",
+      "Searching for id=55 53407987C SINGAPORE ACCOUNTING FIRM\n",
+      "    [SUCCESS] Found company info for id=55 on retry=0 ACCOUNTING AND AUDITING SERVICES (INCLUDING TAXATION ADVISORY SERVICES)  ACCOUNTING AND AUDITING SERVICES (INCLUDING TAXATION ADVISORY SERVICES)\n",
+      "Searching for id=56 53407988A S.G. CHIN & ASSOCIATES\n",
+      "    [SUCCESS] Found company info for id=56 on retry=0 ARCHITECTURAL SERVICES  ARCHITECTURAL SERVICES\n",
+      "Searching for id=57 53407989W OCEANMAD CONSULTANCY\n",
+      "    [SUCCESS] Found company info for id=57 on retry=0 MANAGEMENT CONSULTANCY SERVICES (GENERAL)  MANAGEMENT CONSULTANCY SERVICES (GENERAL)\n",
+      "Searching for id=58 53407990C ASCERTAIN\n",
+      "    [ERROR] Failed at id=58 retry=0 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=1 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=2 error=12, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=3 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=4 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=5 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=6 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=7 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=8 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=9 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=10 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=11 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=12 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=13 error=list index out of range, retrying...\n",
+      "    [ERROR] Failed at id=58 retry=14 error=list index out of range, retrying...\n"
      ]
     }
    ],
